2004-04-20  MenTaLguY <mental@rydia.net>

    * src/text-context.cpp: merged Carl's fix for signal cleanup

2004-04-20  Carl Hetherington <inkscape@carlh.net>

	* src/extension/internal/ps.cpp, src/extension/internal/ps.h:
	Fixed some bugs in exporting images that seem to have been
	introduced when the code was copied from the gimp.  They caused
	problems when exporting bitmap images to PS.

	* src/file.cpp: fix bug whereby the first file loaded in a session
	would not have its modified status checked when closed.  Hence if
	you modified the first file you loaded and then closed it, you
	would not be asked to confirm the close.

	* src/preferences-skeleton.h: add \n to the end of each line to
	fix bug 938368.

2004-04-19  MenTaLguY <mental@rydia.net>

    * src/arc-context.cpp, src/desktop-handles.h, src/desktop.h,
	  src/draw-context.cpp, src/draw-context.h, src/forward.h,
	  src/inkscape-private.h, src/inkscape.cpp, src/node-context.cpp,
	  src/node-context.h, src/rect-context.cpp, src/selection-chemistry.cpp,
	  src/selection-chemistry.h, src/selection.cpp, src/selection.h,
	  src/seltrans.h, src/spiral-context.cpp, src/star-context.cpp,
	  src/star-context.h, src/text-context.cpp, src/dialogs/xml-tree.cpp,
	  src/widgets/sp-widget.h:

	  finished GObject removal from SPSelection

    * src/arc-context.h, src/arc-context.cpp, src/desktop.cpp, src/desktop.h,
	  src/draw-context.cpp, src/draw-context.h, src/node-context.cpp,
	  src/node-context.h, src/rect-context.cpp, src/rect-context.h,
	  src/selection.cpp, src/selection.h, src/seltrans.cpp, src/seltrans.h,
	  src/spiral-context.cpp, src/spiral-context.h, src/text-context.cpp,
	  src/text-context.h, src/toolbox.cpp:

	  migrated SPSelection to SigC++ signals (though it's a bit messy
	  right now)

2004-04-19  Peter  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp: Cleanups: greater conformance to
	CodingStyle.  Moved some declarations to their first use.
