@@ -516,6 +516,9 @@ sp_desktop_change_document (SPDesktop *desktop, SPDocument *document)
     g_return_if_fail (document != NULL);
     g_return_if_fail (SP_IS_DOCUMENT (document));
 
+    /* unselect everything before switching documents */
+    sp_selection_empty (SP_DT_SELECTION (desktop));
+
     sp_view_set_document (SP_VIEW (desktop), document);
 }
 
